--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+*{
+    margin: 0;
+}
+
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css");
 
 @font-face {
